<resources>
    <string name="app_name">小白</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welcome_tip">你好，欢迎使用小白问答。</string>
    <string name="exit_tip">再按一次将退出小白问答</string>
    <string name="tip">提示信息</string>
    <string name="speak">点击后说话</string>
    <string name="send">发送</string>
    <string name="back">返回</string>
    <string name="edit_hint">请输入信息</string>
    <string name="app_learning">小白学习</string>
    <string name="my_information">个人信息</string>
    <string name="action_settings">Settings</string>
    <string name="thanksAndTips">感谢您帮助小白提高应答能力，请在下面写下问题以及您认为正确的答案。</string>
    <string name="question">问题：</string>
    <string name="question_hint"> 请输入</string>
    <string name="answer">答案：</string>
    <string name="answer_hint">请输入答案</string>
    <string name="submit">提交</string>
    <string name="empty_input_tip">问题或答案不能为空</string>
    <string name="exit_hint">你真的想离开可爱的小白问答吗? </string>
    <string name="exit">退出</string>
    <string name="cancel">取消</string>
    <string name="close">关闭</string>
    <string name="startup">启动</string>
    <string name="new_version">检查到新版本:&#160; </string>
    <string name="update_now">立即更新</string>
    <string name="update_next_time">下次再说</string>
    <string name="version_updating">版本更新中</string>
    <string name="being_download">正在下载中</string>
    <string name="app_introduction">功能介绍</string>
    <string name="daily_title">1.&#160;日常对话</string>
    <string name="music_title">2.&#160;音乐播放</string>
    <string name="time_title">3.&#160;时间日期</string>
    <string name="weather_title">4.&#160;天气预报</string>
    <string name="poetry_title">5.&#160;唐诗宋词</string>
    <string name="story_title">6.&#160;故事朗读</string>
    <string name="translate_title">7.&#160;中英翻译</string>
    <string name="bai_ke_title">8.&#160;百科普及</string>
    <string name="calculate_title">9.&#160;数学计算</string>
    <string name="learn_title">10.&#160;帮助小白学习</string>
    <string name="wake_up_title">11.&#160;语音唤醒</string>
    <string name="lang_switch_title">12.&#160;语音类型切换</string>
    <string name="update_title">13.&#160;版本更新</string>
    <string name="action_title">14.&#160;动作命令执行</string>
    <string name="intro_daily">小白就是小主人的小助手、好朋友，随时随地都能陪小主人聊天</string>
    <string name="intro_music">输入“音乐播放、歌曲播放、放首歌来听听，上一首、下一首、暂停、继续、继续播放、停止”等命令，小白可以根据小主人的本地歌单，音乐播放等操作</string>
    <string name="intro_weather">输入“今天天气如何，天气预报”等命令，小白将为小主人播放天气预报</string>
    <string name="intro_time">输入“现在几点，今天是几号，今天星期几”等命令小白将为小主人播报当前时间或日期</string>
    <string name="intro_poetry">输入包含“给我讲首唐诗、给我来首李白的诗、题目是登鹳雀楼的诗、床前明月光的下一句是什么”等命令，小白将为小主人朗读相应的唐诗</string>
    <string name="intro_story">输入“讲个故事给我听听、讲故事、讲个有趣的故事，再来一个”等命令，小白将为小主人朗读故事</string>
    <string name="intro_translate">输入“翻译”后接要翻译内容，如“翻译我喜欢和你聊天”，小白将为小主人翻译相应内容</string>
    <string name="intro_baike">输入“百科”后接要了解的内容，如“百科大白”，小白将为小主人介绍相应的内容</string>
    <string name="intro_calculate">输入“计算”后加计算内容，如“1+2等于多少”，小白将给出计算后的结果</string>
    <string name="intro_action">输入“前进、动一下、跑起来、左转、右转、转圈、不要动、后退”等命令，小白将为小主人执行相应的动作</string>
    <string name="intro_lang_switch">输入包含“我要讲英语、切换为英语、我要学英语、I wanna to speak Chinese”等命令，小白将用对应的语言和小主人进行交流</string>
    <string name="intro_learning">向左滑动屏幕，点击“帮助小白学习”选项，可以向小白提交你认为正确的问题和答案</string>
    <string name="intro_update">向左滑动屏幕，点击“版本更新”，可以检查小白是否有新版本可以更新</string>
    <string name="intro_wakeup">直接说出“小白你好”可以唤醒小白进行语音识别，同时启动连续识别模式，实现与小白的零接触纯语音交互，同时可以通过说出“关闭识别”使小白关闭连续识别，再次进入休眠转态</string>
    <string name="change_to_English">当前语言已切换为英语</string>
    <string name="change_to_Chinese">当前语言已切换为中文</string>
    <string name="did_not_start_music_manager">您尚未启动音乐播放功能</string>
    <string name="no_music_play">当前并没有音乐正在播放中</string>
    <string name="speech_preper">请稍等</string>
    <string name="speak_please">请说话</string>
    <string name="listening">倾听中</string>
    <string name="recognizing">正在识别</string>
    <string name="recognize_finish">说完了</string>
    <string name="cannot_speak">，小白暂时无法为你朗读</string>
    <string name="unknow_error">未知错误</string>
    <string name="null_tips">你输入的内容为空</string>
    <string name="music">音乐: &#160;</string>
    <string name="playing"> &#160;正在播放</string>
    <string name="pause"> &#160;已暂停播放</string>
    <string name="continues"> &#160;已恢复播放</string>
    <string name="stop"> &#160;已停止播放</string>
    <string name="next">正在播放下一首:&#160; </string>
    <string name="previous">正在播放上一首:&#160; </string>
    <string name="call_in">主人，来电了，音乐:&#160; </string>
    <string name="call_finish">退出通话状态，音乐:&#160; </string>
    <string name="isCompleted"> &#160;已播放完毕，还要再来一首吗？</string>
    <string name="setLanguage">设置系统语言</string>
    <string name="changeFail">修改未成功，请重新修改</string>
    <string name="setVoiceLanguage">选择语音类别</string>
    <string name="setVoiceLanguageTitle">请设置语音输入种类</string>
    <string name="currentLanguage">当前语言为</string>
    <string name="isStartWakeUp">是否启动唤醒功能</string>
    <string name="wakeUp">语音唤醒</string>
    <string name="isContinueRecognition">是否启动连续识别</string>
    <string name="continuousRecognition">连续识别</string>
    <string name="helpBayMin">帮助小白学习</string>
    <string name="setBackground">设置聊天背景</string>
    <string name="introduction">功能介绍</string>
    <string name="checkVersion">检查新版本</string>
    <string name="detectingNewVersion">正在获取版本信息</string>
    <string name="noNewVersion">当前已是最新版本</string>
    <string name="setting">设置</string>
    <string name="login">登录</string>
    <string name="nickname">昵称</string>
    <string name="change_nickname">修改昵称</string>
    <string name="change_nickname_hint">请输入新的昵称</string>
    <string name="email">邮箱</string>
    <string name="change_email">修改邮箱</string>
    <string name="change_email_hint">请输入新的邮箱地址</string>
    <string name="verify_password_hint">请输入您的原密码</string>
    <string name="password">密码</string>
    <string name="src_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="confirmPassword">确认密码</string>
    <string name="register">注册</string>
    <string name="hadAccount">已经有账号了？登录</string>
    <string name="noAccount">还没有账号？注册一个</string>
    <string name="remember">记住密码？</string>
    <string name="editInfo">编辑资料</string>
    <string name="save">保存</string>
    <string name="set_user_image">设置头像</string>
    <string name="synchronize_image">头像设置正在同步中&#8230;</string>
    <string name="upload_successfully">上传成功</string>
    <string name="upload_failed">上传失败</string>
    <string name="selectFromAlbum">从相册中选择</string>
    <string name="takePhoto">拍照</string>
    <string name="growth_tip">成长值</string>
    <string name="change_password">修改密码</string>
    <string name="log_out">退出登录</string>
    <string name="login_tips">登录可以享受更多功能哦</string>
    <string name="login_now">立即登录</string>
    <string name="xlistview_header_hint_normal">下拉加载更多</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载…</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="close_asr">关闭识别</string>
    <string name="has_not_sign_up">该邮箱尚未注册</string>
    <string name="wrong_psw">密码错误</string>
    <string name="login_validating">登录验证中&#8230;</string>
    <string name="login_failed">登录失败</string>
    <string name="login_successfully">登录成功</string>
    <string name="synchronizing">正在同步您的个人信息&#8230;</string>
    <string name="synchronized_successfully">数据同步成功!</string>
    <string name="synchronized_failed">数据同步失败!</string>
    <string name="wrong_email">请输入一个合法的Email地址</string>
    <string name="psw_wrong_length">密码长度在6到20个字符之间</string>
    <string name="registering">注册中&#8230;</string>
    <string name="register_failed">注册失败</string>
    <string name="username_wrong_length">用户名不小于3个字符长度</string>
    <string name="wrong_to_confirm_psw">确认密码不正确，请重新输入</string>
    <string name="no_album">未找到图片查看器</string>
    <string name="no_camera">无法启动相机</string>
    <string name="failed_to_get_image">获取图片失败</string>
    <string name="ok">确定</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="request_microphone_tip">为了使用语音交流，请允许小白打开麦克风权限，进行录音或合成</string>
    <string name="request_phone_tips">为了避免语音交流影响到通话，请允许小白打开监听通话状态（来电、通话中、去电）权限</string>
    <string name="request_storage_tip">为了能够使用音乐播放和设置个人头像功能，请允许小白打开本机外部存储权限，扫描本机音乐，打开本机相册</string>
    <string name="request_camera_tip">为了能够使用拍照功能，请允许小白打开本相机功能</string>
</resources>
