<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/communication"
            android:icon="@drawable/ic_menu_camera"
            android:title="聊天主界面" />
        <item
            android:id="@+id/setVoiceLanguage"
            android:icon="@drawable/ic_menu_voice"
            android:title="@string/setVoiceLanguage" />
        <item
            android:id="@+id/recognizeWakeUp"
            android:icon="@drawable/continue_asr"
            android:title="@string/wakeUp" />
        <item
            android:id="@+id/helpBayMin"
            android:icon="@drawable/idea"
            android:title="@string/helpBayMin" />
        <item
            android:id="@+id/setBackground"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/setBackground" />
        <item
            android:id="@+id/introduction"
            android:icon="@drawable/service"
            android:title="@string/introduction" />
        <item
            android:id="@+id/checkVersion"
            android:icon="@drawable/refresh"
            android:title="@string/checkVersion" />
    </group>

    <item android:title="@string/setting">
        <menu>
            <item
                android:id="@+id/setLanguage"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/setLanguage" />
            <item
                android:id="@+id/exit"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/exit" />
        </menu>
    </item>

</menu>
