<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.qa.fgj.baymin.widget.XListView
        android:layout_width="match_parent"
        android:id="@+id/listContent"
        android:layout_height="0dp"
        android:layout_weight="11"
        android:paddingTop="10dp"
        android:divider="@null"
        android:cacheColorHint="#00000000"
        android:transcriptMode="alwaysScroll" />

    <LinearLayout
        android:id="@+id/msgButtonBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:background="@drawable/input_bar">

        <ImageButton
            android:id="@+id/inputType"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/edit"
            android:background="@drawable/bg_button"/>

        <Button
            android:id="@+id/voiceButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:layout_marginEnd="5dp"
            android:background="@drawable/bg_button"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/speak"/>

        <EditText
            android:id="@+id/textInput"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/edit_hint"
            android:textSize="18sp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/sendButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/bg_button"
            android:text="@string/send"
            android:textSize="17sp"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>



